tests/build/widget_new/incorrect_arg_type4.stderr
error[E0277]: the trait bound `bool: IntoVar<GradientStops>` is not satisfied
  --> $DIR/incorrect_arg_type4.rs:10:20
   |
10 |             stops: true
   |                    ^^^^
   |                    |
   |                    expected an implementor of trait `IntoVar<GradientStops>`
   |                    help: consider borrowing here: `&true`
   |
   = note: required by `background_gradient_ArgsImpl::<T_axis, T_stops>::new`
